--- a/src/index.html
+++ b/src/index.html
@@ -2,19 +2,25 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Open Infrastructure Map</title>
-    <meta name="description" content="Map of the world's hidden power and telecoms infrastructure, with data from OpenStreetMap" />
+    <title>Gespot</title>
+    <meta name="description" content="Application française de description des supports des réseaux telecoms et électriques aériens" />
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:site" content="@openinframap" />
-    <meta name="twitter:creator" content="@russss" />
+    <meta name="twitter:site" content="@InfosReseaux" />
+    <meta name="twitter:creator" content="@InfosReseaux" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta property="og:description" content="Map of the world's hidden power and telecoms infrastructure, with data from OpenStreetMap" />
-    <meta property="og:title" content="Open Infrastructure Map" />
+    <meta property="og:description" content="Application française de description des supports des réseaux telecoms et électriques aériens" />
+    <meta property="og:title" content="Gespot" />
 </head>
 <body>
-	<noscript>You must have Javascript enabled to view Open Infrastructure Map</noscript>
+	<noscript>You must have Javascript enabled to view Gespot</noscript>
 	<div id="container" style="display:none">
-		<header><h1>Open Infrastructure Map</h1>&nbsp;&nbsp;<a href="/about.html">about</a></header>
+		<header>
+            <div class="float-left text-left">
+                <h1>Gespot</h1>
+                &nbsp;&nbsp;<a class="text-secondary" href="/about-fr.html">A propos</a>
+                &nbsp;&ndash;&nbsp;<a class="text-secondary" href="/legal.html">Mentions légales</a>
+            </div>
+        </header>
 		<div id="map"></div>
 	</div>
 </body>
