--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Open Infrastructure Map</title>
+    <title>Gespot</title>
     <meta name="description" content="Application française de description des supports des réseaux telecoms et électriques aériens" />
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@InfosReseaux" />
