--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 <body>
 	<noscript>You must have Javascript enabled to view Gespot</noscript>
 	<div id="container" style="display:none">
-		<header><h1>Gespot</h1><br/>><a href="/about-fr.html">A propos</a></header>
+		<header><h1>Gespot</h1><br/><a href="/about-fr.html">A propos</a></header>
 		<div id="map"></div>
 	</div>
 </body>
