--- a/index.html
+++ b/index.html
@@ -12,17 +12,18 @@
     <meta property="og:title" content="Gespot" />
   </head>
   <body>
-	<noscript>You must have Javascript enabled to view Gespot</noscript>
-	<div id="container" style="display:none">
-	  <header>
-        <div class="float-left text-left">
-          <h1>Gespot</h1>
-          &nbsp;&nbsp;<a class="text-secondary" href="/about-fr.html">A propos</a>
-          &nbsp;&ndash;&nbsp;<a class="text-secondary" href="/legal.html">Mentions légales</a>
-        </div>
-      </header>
-	  <div id="map"></div>
-	</div>
+	  <noscript>You must have Javascript enabled to view Gespot</noscript>
+	  <div id="container" style="display:none">
+	    <header>
+          <div class="float-left text-left">
+            <h1>Gespot</h1>
+            &nbsp;&nbsp;<a class="text-secondary" href="/about-fr.html">A propos</a>
+            &nbsp;&ndash;&nbsp;<a class="text-secondary" href="/legal.html">Mentions légales</a>
+          </div>
+          <div class="float-left text-left">La gestion des poteaux en commun. Les explications <a href="http://peertube.openstreetmap.fr/w/pTsdU23amy9FX88mgyxBwR">en vidéo</a>.</div>
+        </header>
+	    <div id="map"></div>
+	  </div>
     <script type="module" src="/src/index.ts"></script>
   </body>
 </html>
