--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             <h1>Gespot</h1>
             &nbsp;&nbsp;<a class="text-secondary" href="/about-fr.html">A propos</a>
             &nbsp;&ndash;&nbsp;<a class="text-secondary" href="/legal.html">Mentions légales</a>
+            <br/>La gestion des poteaux en commun. Les explications <a href="http://peertube.openstreetmap.fr/w/pTsdU23amy9FX88mgyxBwR">en vidéo</a>.
           </div>
-          <div class="float-left text-left">La gestion des poteaux en commun. Les explications <a href="http://peertube.openstreetmap.fr/w/pTsdU23amy9FX88mgyxBwR">en vidéo</a>.</div>
         </header>
 	    <div id="map"></div>
 	  </div>
