--- a/index.html
+++ b/index.html
@@ -10,6 +10,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:description" content="Application française de description des supports des réseaux telecoms et électriques aériens" />
     <meta property="og:title" content="Gespot" />
+
+    <!-- Matomo -->
+    <script>
+      var _paq = window._paq = window._paq || [];
+      _paq.push(['trackPageView']);
+      _paq.push(['enableLinkTracking']);
+      (function() {
+        var u="https://stats.openstreetmap.fr/";
+        _paq.push(['setTrackerUrl', u+'matomo.php']);
+        _paq.push(['setSiteId', '7']);
+        var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+        g.async=true; g.src=u+'matomo.js'; s.parentNode.insertBefore(g,s);
+      })();
+    </script>
+    <!-- End Matomo Code -->
   </head>
   <body>
 	  <noscript>You must have Javascript enabled to view Gespot</noscript>
