Evolution infobulle avec l'introduction du visuel des supports

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 	  <div id="container" style="display:none">
 	    <header>
           <div class="float-left text-left">
+            <div class="float-left mr-2 mb-1"><img src="img/frise.svg" alt="Logo" height="35"/></div>
             <h1>Gespot</h1>
-            &nbsp;&nbsp;<a class="text-secondary" href="/about-fr.html">A propos</a>
-            &nbsp;&ndash;&nbsp;<a class="text-secondary" href="/legal.html">Mentions légales</a>
-            <br/>La gestion des poteaux en commun. Les explications <a href="http://peertube.openstreetmap.fr/w/pTsdU23amy9FX88mgyxBwR" target="_blank">en vidéo</a>.
+            <div class="d-inline-block ml-2"><a class="text-secondary" href="/about-fr.html">A&nbsp;propos</a>&nbsp;&ndash;&nbsp;<a class="text-secondary" href="/legal.html">Mentions&nbsp;légales</a></div>
+            <div style="clear:left;">Gérer les poteaux en commun. Les explications <a href="http://peertube.openstreetmap.fr/w/pTsdU23amy9FX88mgyxBwR" target="_blank">en vidéo</a>.</div>
           </div>
         </header>
 	    <div id="map"></div>
