--- a/public/legal.html
+++ b/public/legal.html
@@ -24,7 +24,7 @@
 <body>
    <div class="container">
 	<header>
-      <h1>Mentions légales</h1>
+      <h1><img src="img/frise.svg" alt="Logo" height="50"/>&nbsp;Mentions légales</h1>
 	</header>
     <div class="row">
       <div class="col-lg-6">
