Ajout d'un message en cas d'absence de design

--- a/public/about-fr.html
+++ b/public/about-fr.html
@@ -36,10 +36,10 @@
       pour prendre conscience de la diversité des données disponibles.</p>
 
       <h2>Comment contribuer ?</h2>
-      <p>Il est possible de compléter ou de corriger des données manquantes. Visitez <a href="https://learnosm.org">learnOSM</a> pour cela.
+      <p>Il est possible de compléter ou de corriger des données manquantes directement sur OpenStreetMap. Visitez <a href="https://learnosm.org">learnOSM</a> pour cela.
       <p>
           Si vous avez déjà quelques compétences et expérience dans la contribution OpenStreetMap,
-          visitez les pages de wiki <a href="http://wiki.openstreetmap.org/wiki/Power">Power</a> et <a href="http://wiki.openstreetmap.org/wiki/WikiProject_Telecoms">WikiProject Telecoms</a>.
+          visitez les documentations pour les réseaux <a href="https://wiki.openstreetmap.org/wiki/Power_networks/France" target="_blank">électriques</a> ou <a href="http://wiki.openstreetmap.org/wiki/WikiProject_Telecoms" target="_blank">de télécommunication</a>.
       </p>
 
       <h3>Vous êtes impliqués dans le déploiement FTTH en France ?</h3>
